    Instead, recommend the use of wildcards of ${DEB_HOST_MULTIARCH}
    to replace the hardcoded value.
  * d/changelog: Clarify that dh_installman change in 13.1 related to
    #958343.
  * Dh_Lib.pm: Add support for raising compat deprecation warnings to
    an error if there are pending removals.  This currently triggers
    for usage of compat 5 and 6.

  [ Anel Husakovic ]
  * debhelper.7: Fix typo/grammatical errors.

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)  (Closes: #962568)

 -- Niels Thykier <niels@thykier.net>  Mon, 01 Jun 2020 12:03:12 +0000

debhelper (13.1) unstable; urgency=low

  [ Niels Thykier ]
  * dh_installinitramfs: Remove misleading "in compat 12" as the
    behaviour was unrelated to the compat level.
  * dh_installinitramfs: Migrate to using declaratively triggering
    update-initramfs as a noawait trigger (replacing maintscript
    calls to "update-initramfs -u", which had the same affect).
    (Closes: #822730).
  * dh_installman: Improve error messages and handling of broken
    section numbers.  Notably, the auto-detection no longer picks
    section numbers that look suspiciously like a version number
    (or a date).  This can cause dh_installman to reject manpages
    if it can no longer guess a suitable section for the manpage
    Thanks to Paul Gevers for reporting the bug.
    (Closes: #958343)
  * Dh_Lib.pm: Support that Architecture (among other fields) can be
    folded in d/control.  Thanks to Thorsten Glaser for reporting
    the issue.  (Closes: #958987)
  * SequencerUtil.pm: Fix use of uninitialized variable warning.
  * Dh_Lib.pm: Properly error out on paragraphs missing the Package
    field (rather than silently ignoring them).
  * debian/rules: Fix call to gen-provides that seemed to work more
    due to luck than by design.
  * Dh_Lib.pm: Provide HIGHEST_STABLE_COMPAT_LEVEL, which reflects
    the latest stable compat level.  Thanks to Jelmer Vernooĳ
    for the suggestion.